<resources>
    <string name="app_name">Dilkibaat</string>
    <string name="login">Login to your Account</string>
    <string name="enter_id">Enter_Id_x</string>
    <string name="enter_id_password">Enter_password_x</string>
    <string name="Remember">Remember Me</string>
    <string name="Login1">Login</string>
    <string name="started">getting started....</string>
    <string name="signup">Create Your Account</string>
    <string name="enter_name">Name_X</string>
    <string name="enter_email">Email_X</string>
    <string name="enter_phoneNo">Phone_x</string>
    <string name="gender">Gender:</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="NotToSay">Prefer Not to say</string>
    <string name="signup_user">Signup</string>
    <string name="setting_up_profile">Setting up Your Profile</string>
    <string name="adding_profile">add your profile photo</string>
    <string name="set_a_username">set a username</string>
    <string name="EnterMobileno">Enter your registered Email \nor mobile No.</string>
    <string name="mobile">Mobile no. or Email Address</string>
    <string name="submit">Submit</string>
    <string name="resetpassword">We will send the link to reset password</string>
    <string name="EnterOtp">Enter the OTP sent to your \nregistered Mobile</string>
    <string name="verify">Verify</string>
    <string name="forgot_pasword">Forgot Password?</string>
    <string name="show_username">username_x</string>
    <string name="paragraph">“A Wise Woman is a Myth” times they changin...somene said this to me and I was totally agree with him at that point.I thougth there is no point disagreeing a wise man.times they changin...somene said this to me and I was totally agree with him at that point.I thougth there is no point disagreeing a wise man.times they changin...somene said this to me and I was totally agree with him at that point.I thougth there is no point disagreeing a wise I was totally agree with him at that point.I thougth there is no point disagreeing a wise man.times they changin...somene said this to me and I was totally agree with.</string>
</resources>