<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingUpProfile"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_up_profile"
        android:gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/black" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adding_profile"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="110sp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/orange" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:clickable="true"
        app:backgroundTint="@color/orange"
        app:fabCustomSize="150dp"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_baseline_add_24"

        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_a_username"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="50dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/blue" />



<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_baseline_arrow_right_alt_24"
    android:layout_marginTop="60dp"
    android:layout_margin="40dp"
    android:layout_gravity="bottom|end"
    app:rippleColor="@color/orange"
    />
</LinearLayout>